--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,8 +27,10 @@ flutter:
   # be modified. They are used by the tooling to maintain consistency when
   # adding or updating assets for this project.
   plugin:
-    androidPackage: com.amorenew.root.install.root_install
-    pluginClass: RootInstallPlugin
+    platforms:
+      android:
+        package: com.amorenew.root.install.root_install
+        pluginClass: RootInstallPlugin
 
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
